﻿3.2.0 [TBD]
[+] Add netstandard 2.1 support.
[+] The package is built with nullable reference type annotations.
[-] Remove AtomicUtils.SafeSwap .
[*] Use Count() call for enumerable ChunkSelectRange because it has much more effective implementation.
[+] Add constructor to DiffResult.
[*] Overall code clean up.

3.1.1 [2019-12-28]
[*] OrderParsingDelegates.ParseSeparated returns empty collection if string is empty.
[*] CollectionUtils.OrderMultiple returns unsorted collection if orderEntries is empty.

3.1.0 [2019-12-03]
[*] Use DiffResultUpdatedItems{T} for Diff{T} instead of tuples.
[-] Remove CollectionUtils.OrderMultiple support for net40.
[*] Fix net40 support.
[+] Add deconstruct for Diff{T}.
[*] Fix pagination Empty result.

3.0.0 [2019-12-01]
[-] Drop support for net452 and net461.
[+] Add method to diff collections CollectionUtils.Diff and CollectionUtils.ApplyDiff .
[+] Add method to apply collection sorting with one call CollectionUtils.OrderMultiple .
[+] Make covariant IMetadataDto generic type parameters.
[+] Simplify metadata generation by introducing TotalCountListMetadataDto, OffsetLimitMetadataDto, PagedListMetadataDto.
[+] Add enum utils GetNamesWithDescriptions, GetValuesWithDescriptions.
[-] Remove string extensions methods.
[-] Remove ObjectUtils.CreateTypeFactory .
[*] Remove not needed dependencies.

2.0.1 [2019-03-13]
[*] Fix PagedListFactory.Empty and OffsetLimitListFactory.Empty exception.

2.0.0 [2019-02-27]
[*] Use Count for OffsetLimitList.FromSource .
[+] Add Empty method to pagination factories.
[+] Add shorthand Create method to pagination factories.
[*] Comments update.
[+] Memoize is thread safe now.
[-] Remove SkipMemoizeException.

1.0.0 [2018-11-02]
[*] Fix pagination usage when page size is int.MaxSize .
[+] Add Exponential Backoff Normalized delay retry strategy to flow utils.
[*] Parameter firstFastRetry now adds extra attempt.
[-] Drop netstandard 1.2 support.
[+] SourceLink support.

0.4.8 [2018-07-12]