@@ -5,6 +5,7 @@
 [*] Use Count() call for enumerable ChunkSelectRange because it has much more effective implementation.
 [+] Add constructor to DiffResult.
 [*] Overall code clean up.
+[*] CollectionUtils.OrderMultiple generates InvalidOrderFieldException instead of InvalidOperationException.
 
 3.1.1 [2019-12-28]
 [*] OrderParsingDelegates.ParseSeparated returns empty collection if string is empty.
